--- a/views/register.html.twig
+++ b/views/register.html.twig
@@ -1,34 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html.twig" %}
 
-<head>
+{% block title %} 
+	Register user
+{% endblock title%}
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+{% block meta %}
+	<meta charset="utf-8">
+	<meta name="author" value="CodeGh0st">
+	<meta name="robots" value="noindex,nofollow">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+{% endblock %}
 
-    <title>Full Width Pics - Start Bootstrap Template</title>
-
+{% block css%}
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom CSS -->
     <link href="css/full-width-pics.css" rel="stylesheet">
+{% endblock %}
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+{% block frontendjs %}
+{% endblock %}
 
-</head>
-
-<body>
-
-    <!-- Navigation -->
+{% block body %}
+<!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -73,9 +68,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="section-heading">Section Heading</h1>
-                    <p class="lead section-lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    <p class="section-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
+                    <h1 class="section-heading">Register user</h1>
+                    <p class="lead section-lead">before login you have to register a user</p>
+                    <form>
+	                    <div class="form-group">
+							<label for="usr">User:</label>
+							<input type="text" class="form-control" id="usr">
+						</div>
+						<div class="form-group">
+							<label for="name">name:</label>
+							<input type="text" class="form-control" id="name">
+						</div>
+						<BUTTON type="submit" >register</BUTTON>
+					</form>
                 </div>
             </div>
         </div>
@@ -86,7 +91,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Kevin - Jounior</p>
                 </div>
             </div>
             <!-- /.row -->
@@ -99,7 +104,7 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+{% endblock %}
 
-</body>
-
-</html>
+{% block backendjs %}
+{% endblock %}
